<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/lightgreen"
        tools:context=".view.cliente.TelaCliente">

        <Button
            android:id="@+id/btn_voltar"
            android:layout_width="68dp"
            android:layout_height="35dp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="15sp"
            android:layout_gravity="end"
            android:backgroundTint="@color/softgreen"
            android:padding="1dp"
            android:text="@string/btn_voltar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cadastrar Serviço"
            android:textSize="35dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="15dp"
            />

        <EditText
            android:id="@+id/edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            />

        <EditText
            android:id="@+id/edit_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telefone"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="text|phone"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/edit_servico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_servico"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/edit_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_valor"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="number"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/edit_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_status"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="15dp"
            android:maxLines="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/edit_email_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_cliente"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_gravity="center"
            android:backgroundTint="@color/softgreen"
            android:padding="15dp"
            android:text="Salvar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>