<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/txtOrdem"
            android:layout_width="190dp"
            android:layout_height="29dp"
            android:text="Ordem de Servico"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_nome"
            android:text="Nome:"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txtOrdem"
            app:layout_constraintTop_toBottomOf="@+id/txtOrdem" />


        <TextView
            android:id="@+id/telefone"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_telefone"
            android:text="Telefone:"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/nome"
            app:layout_constraintTop_toBottomOf="@+id/nome" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:hint="@string/hint_email"
            android:text="Email:"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/telefone"
            app:layout_constraintTop_toBottomOf="@+id/telefone"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/servico"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_servico"
            android:text="Servico:"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />


        <TextView
            android:id="@+id/valor"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_valor"
            android:text="Valor:"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/servico"
            app:layout_constraintTop_toBottomOf="@+id/servico" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_status"
            android:text="Status:"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/valor"
            app:layout_constraintTop_toBottomOf="@+id/valor" />

        <TextView
            android:id="@+id/avaliacao"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="4dp"
            android:hint="Avaliação"
            android:text="Avaliação:"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/status"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="255dp" />

        <TextView
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:hint="Comentário"
            android:text="Comentário:"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/avaliacao"
            tools:layout_editor_absoluteY="292dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
