<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/lightgreen"
        tools:context=".view.formlogin.form_login">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo.form.login"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="100dp"
            />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_senha"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="numberPassword"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />


        <Button
            android:id="@+id/btn_esqueceu_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:backgroundTint="@color/softgreen"
            android:padding="10dp"
            android:text="Esqueceu a senha?"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/softgreen"
            android:padding="15dp"
            android:text="@string/btn_entrar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_Tela_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tela_cadastro"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle= "italic"
            android:gravity="center"
            android:padding="20dp"
            />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>