<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/lightgreen"
        tools:context=".view.home.Home">

        <Button
            android:id="@+id/btn_sair"
            android:layout_width="60dp"
            android:layout_height="33dp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="15sp"
            android:backgroundTint="@color/softgreen"
            android:padding="1dp"
            android:text="@string/btn_sair"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_tela_home"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:layout_marginLeft="50sp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/tela_cliente"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            android:backgroundTint="@color/softgreen"
            android:padding="15dp"
            android:text="@string/btn_buscar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_relatorio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35sp"
            android:backgroundTint="@color/softgreen"
            android:padding="15dp"
            android:text="Relatório"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>