<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/txtServicos"
            android:layout_width="94dp"
            android:layout_height="34dp"
            android:gravity="center_horizontal"
            android:text="Serviços"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/servico"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_servico"
            android:text="Servico:"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/txtServicos"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/valor"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_valor"
            android:text="Valor:"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/servico"
            app:layout_constraintTop_toBottomOf="@+id/servico" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_status"
            android:text="Status:"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/valor"
            app:layout_constraintTop_toBottomOf="@+id/valor" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
